--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ body{
   }
   h1{
     margin: 40px auto;
-    color: #0e7987;
+    color: #033d3e;
     text-align: center;
   }
   ul{
@@ -58,7 +58,7 @@ body{
   button{
     color: white;
     border: 0;
-    background: #8af1f3;
+    background: #033d3e;
     padding: 6px;
     min-width: 80px;
     border-radius: 4px;
